--- a/Base/res/cursor-themes/Vanliga/Config.ini
+++ b/Base/res/cursor-themes/Vanliga/Config.ini
@@ -13,7 +13,7 @@ Move=../Default/move.png
 Hand=../Default/hand.x8y4.png
 Help=../Default/help.x1y1.png
 Drag=../Default/drag.png
-Wait=../Default/wait.f14t100.png
+Wait=wait.x4y4.png
 Crosshair=../Default/crosshair.png
 Eyedropper=../Default/eyedropper.x2y2.png
 Zoom=../Default/zoom.x0y0.png
