Base: Update Vanliga-Dark Theme add wait.png

--- a/Base/res/cursor-themes/Vanliga-Dark/Config.ini
+++ b/Base/res/cursor-themes/Vanliga-Dark/Config.ini
@@ -13,7 +13,7 @@ Move=../Dark/move.png
 Hand=../Dark/hand.x8y4.png
 Help=../Dark/help.x1y1.png
 Drag=../Dark/drag.png
-Wait=../Dark/wait.f14t100.png
+Wait=wait.x4y4.png
 Crosshair=../Dark/crosshair.png
 Eyedropper=../Dark/eyedropper.x2y2.png
 Zoom=../Dark/zoom.x0y0.png
