Base: Update Vanliga Theme add help.png

--- a/Base/res/cursor-themes/Vanliga/Config.ini
+++ b/Base/res/cursor-themes/Vanliga/Config.ini
@@ -11,7 +11,7 @@ IBeam=../Default/i-beam.png
 Disallowed=../Default/disallowed.png
 Move=../Default/move.png
 Hand=../Default/hand.x8y4.png
-Help=../Default/help.x1y1.png
+Help=help.x4y4.png
 Drag=../Default/drag.png
 Wait=wait.x4y4.png
 Crosshair=../Default/crosshair.png
