Base: Update Vanliga Cursor Theme add wait animated

--- a/Base/res/cursor-themes/Vanliga/Config.ini
+++ b/Base/res/cursor-themes/Vanliga/Config.ini
@@ -13,7 +13,7 @@ Move=../Default/move.png
 Hand=../Default/hand.x8y4.png
 Help=help.x4y4.png
 Drag=../Default/drag.png
-Wait=wait.x4y4.png
+Wait=wait.x4y4.f6t200.png
 Crosshair=../Default/crosshair.png
 Eyedropper=../Default/eyedropper.x2y2.png
 Zoom=../Default/zoom.x0y0.png
