--- a/Base/res/cursor-themes/Vanliga-Dark/Config.ini
+++ b/Base/res/cursor-themes/Vanliga-Dark/Config.ini
@@ -13,7 +13,7 @@ Move=../Dark/move.png
 Hand=../Dark/hand.x8y4.png
 Help=help.x4y4.png
 Drag=../Dark/drag.png
-Wait=wait.x4y4.png
+Wait=wait.x4y4.f6t200.png
 Crosshair=../Dark/crosshair.png
 Eyedropper=../Dark/eyedropper.x2y2.png
 Zoom=../Dark/zoom.x0y0.png
